feat(core/datetime-picker): enable shadow dom

--- a/packages/core/src/components/date-picker/date-picker.scss
+++ b/packages/core/src/components/date-picker/date-picker.scss
@@ -8,11 +8,10 @@
  */
 
 @import 'common-variables';
+@import 'mixins/shadow-dom/component';
 
 :host {
-  ix-date-time-card {
-    display: inline-block;
-  }
+  @include ix-component;
 
   .header {
     display: flex;
