--- a/packages/core/scss/components/_forms.scss
+++ b/packages/core/scss/components/_forms.scss
@@ -10,6 +10,7 @@
 @import 'common-variables';
 @import './mixins/hover';
 @import './mixins/text-truncation';
+@import './mixins/fonts';
 
 @mixin from-control-invalid {
   color: $form-feedback-invalid-color;
