feat: add fadeIn animation

--- a/packages/core/src/components/menu-settings/menu-settings.scss
+++ b/packages/core/src/components/menu-settings/menu-settings.scss
@@ -10,6 +10,9 @@
 @import 'common-variables';
 @import 'fonts';
 @import 'mixins/shadow-dom/component';
+@import 'mixins/shadow-dom/animation/menu-overlay';
+
+@include menuOverlayEnterExitAnimation;
 
 :host {
   @include ix-component;
