--- a/packages/core/src/components/menu-about/menu-about.scss
+++ b/packages/core/src/components/menu-about/menu-about.scss
@@ -9,6 +9,9 @@
 
 @import 'common-variables';
 @import 'fonts';
+@import 'mixins/shadow-dom/animation/menu-overlay';
+
+@include menuOverlayEnterExitAnimation;
 
 :host {
   display: block;
