--- a/packages/core/src/components/basic-navigation/basic-navigation.scss
+++ b/packages/core/src/components/basic-navigation/basic-navigation.scss
@@ -25,11 +25,21 @@
 
   .content {
     display: flex;
-    height: calc(100% - 2.75rem);
-    width: calc(100% - 3.25rem);
+    height: 100%;
+    width: 100%;
     position: relative;
     margin-left: 3.25rem;
     overflow: auto;
+  }
+
+  .navigation-content {
+    display: flex;
+    position: relative;
+
+    flex-direction: row;
+
+    height: calc(100% - 2.75rem);
+    width: 100%;
   }
 }
 
@@ -39,7 +49,13 @@
   }
 }
 
-:host(.mode-mobile) {
+:host(.mode-large) {
+  .content {
+    margin-left: 0rem;
+  }
+}
+
+:host(.mode-small) {
   .content {
     margin-left: 0px;
     width: 100%;
