--- a/packages/core/src/components/menu-item/menu-item.scss
+++ b/packages/core/src/components/menu-item/menu-item.scss
@@ -16,15 +16,15 @@
   display: block;
   cursor: pointer;
 
-  height: 3rem;
-  min-height: 3rem;
-  max-height: 3rem;
+  height: var(--ix-menu-item-height, 3rem);
+  min-height: var(--ix-menu-item-height, 3rem);
+  max-height: var(--ix-menu-item-height, 3rem);
 
   .tab {
     display: flex;
     position: relative;
     align-items: center;
-    height: 3rem;
+    height: var(--ix-menu-item-height, 3rem);
     z-index: 500;
     padding-left: 0.875rem;
 
@@ -91,7 +91,7 @@
   .tab::before {
     content: '';
     background-color: var(--theme-nav-item-primary--border-color--selected);
-    height: 3rem;
+    height: var(--ix-menu-item-height, 3rem);
     width: 0.25rem;
     left: 0;
     position: absolute;
