--- a/packages/core/scss/mixins/_hover.scss
+++ b/packages/core/scss/mixins/_hover.scss
@@ -21,7 +21,8 @@
   &:not(.disabled):not(:disabled) {
     cursor: pointer;
 
-    &:active {
+    &:active,
+    &.active {
       @content;
     }
   }
