test(core/breadcrumb): update vrt snapshots

--- a/packages/core/src/components/breadcrumb/breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/breadcrumb.scss
@@ -12,6 +12,7 @@
 @import 'mixins/fonts';
 @import 'mixins/text-truncation';
 @import 'mixins/shadow-dom/component';
+@import 'components/dropdown';
 
 $focus-bdr-width: 0.0625rem;
 
