test: update snapshots

--- a/packages/core/src/components/basic-navigation/basic-navigation.scss
+++ b/packages/core/src/components/basic-navigation/basic-navigation.scss
@@ -23,6 +23,10 @@
     z-index: calc(var(--theme-z-index-sticky) + 1);
   }
 
+  .logo-wrapper {
+    display: contents;
+  }
+
   .content {
     display: flex;
     height: 100%;
