fix: adapt review comments

--- a/packages/core/scss/components/_links.scss
+++ b/packages/core/scss/components/_links.scss
@@ -34,7 +34,7 @@ a[href]:not(.disabled):not(:disabled) {
   cursor: pointer;
 }
 
-// Workaround for firefox missing :has selector implementation
+// Workaround for missing :has selector implementation in Firefox
 ix-menu > a[href] {
   text-decoration: none;
   color: unset;
