--- a/packages/core/src/components/application-header/application-header.scss
+++ b/packages/core/src/components/application-header/application-header.scss
@@ -8,13 +8,12 @@
  */
 
 :host {
-  $paddingLeft: 1rem;
   display: flex;
   align-items: center;
   position: relative;
   width: 100%;
   height: 2.75rem;
-  padding-left: $paddingLeft;
+  padding-left: 1rem;
 
   color: var(--theme-app-header--color);
   background-color: var(--theme-app-header--background);
