--- a/packages/core/src/components/menu/menu.scss
+++ b/packages/core/src/components/menu/menu.scss
@@ -51,7 +51,7 @@ $menu-expanded-width: 16rem;
     opacity: 0;
     position: absolute;
     width: 100%;
-    height: 10px;
+    height: 0.625rem;
 
     background: linear-gradient(var(--theme-color-shadow-1), transparent);
     pointer-events: none;
