fix(aggrid): remove box shadow from editor cells

--- a/packages/aggrid/scss/ix-aggrid.scss
+++ b/packages/aggrid/scss/ix-aggrid.scss
@@ -85,6 +85,10 @@
     }
   }
 
+  .ag-cell-inline-editing {
+    box-shadow: none;
+  }
+
   .ag-header-cell-resize::after {
     transition: background-color 250ms linear;
   }
