--- a/packages/aggrid/src/components/tests/basic.html
+++ b/packages/aggrid/src/components/tests/basic.html
@@ -33,7 +33,7 @@ LICENSE file in the root directory of this source tree.
         const columnDefs = [
           { field: 'make', resizable: true, checkboxSelection: true },
           { field: 'model', resizable: true, sortable: true, filter: true },
-          { field: 'price', resizable: true },
+          { field: 'price', resizable: true, editable: true },
         ];
 
         const rowData = [
