--- a/packages/core/src/components/icon-button/icon-button.scss
+++ b/packages/core/src/components/icon-button/icon-button.scss
@@ -24,6 +24,27 @@
   }
 }
 
+:host(.btn-icon-12) {
+  ix-spinner {
+    height: 12px;
+    width: 12px;
+  }
+}
+
+:host(.btn-icon-16) {
+  ix-spinner {
+    height: 16px;
+    width: 16px;
+  }
+}
+
+:host(.btn-icon-32) {
+  ix-spinner {
+    height: 24px;
+    width: 24px;
+  }
+}
+
 :host(.disabled) {
   pointer-events: none;
 }
